--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <!-- navigation bar -->
-  <section class="navigation margin overflow-x">
+  <section class="navigation margin overflow-x landing">
     <div class="logo"><a href="index.html">Slice</a></div>
     <div class="weather-container">
       <span id="location">Finding the location</span>
@@ -32,20 +32,20 @@
     </div>
   </section>
 
-  <!-- Main Section:Functions -->
+  <!-- Scroll -->
   <div class="scroll overflow-x">
     <p style="opacity: 1;">Scroll Down</p>
   </div>
 
-  <!-- wave -->
-  <div class="waves">
-    <div class="wave1"></div>
-    <div class="wave2"></div>
-  </div>
+  <!-- Main Section:Functions -->
+    <div class="waves landing">
+      <div class="wave1"></div>
+      <div class="wave2"></div>
+    </div>
 
-  <section class="main">
-    <!-- Main Contents -->
-    <div class="stack-cards">
+  <!-- cards -->
+  <section class="scroll-container">
+    <div class="stack-cards landing">
       <section class="title margin overflow-x sectionDivider">
         <!-- left description -->
         <div class="titleBox">
@@ -80,6 +80,7 @@
         </div>
         <!-- right image -->
         <img class="title-mockup" src="./Assets/Images/Right.png" />
+
       </section>
 
       <!-- function 1 -->
@@ -134,51 +135,55 @@
         </div>
       </div>
     </div>
-  </section>
 
-  <!-- Quote holder -->
-  <section class="quote-container-box overflow-x">
-    <div class="quote-container">
-      <div class="white-container">
-        <img src="./Assets/Images/quote-white.svg" alt="white container" />
-        <div class="API-text" id="phrases"> </div>
-      </div>
-      <div class="character-container">
-        <div class="left-character">
-          <img src="./Assets/Images/characters-left.png" alt="white container" style="width : 20vw" />
+
+    <!-- Quote holder -->
+    <section class="quote-container-box overflow-x">
+      <div class="quote-container">
+        <div class="white-container">
+          <img src="./Assets/Images/quote-white.svg" alt="white container" />
+          <div class="API-text" id="phrases"> </div>
         </div>
-        <div class="right-character">
-          <img src="./Assets/Images/characters-right.png" alt="white container" style="width : 17vw" />
+        <div class="character-container">
+          <div class="left-character">
+            <img src="./Assets/Images/characters-left.png" alt="white container" style="width : 20vw" />
+          </div>
+          <div class="right-character">
+            <img src="./Assets/Images/characters-right.png" alt="white container" style="width : 17vw" />
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <section class="scroll-end-section">
+      <!-- Footer -->
+      <section class="footer-pc margin overflow-x">
+        <div class="footer-menu">
+          <div class="logo"><a href="index.html">Slice</a></div>
+          <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">About Creators: So Yeon
+              Kim</a></div>
+          <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">About Creators: Andie
+              Han</a>
+          </div>
+          <div class="footer-menu-item"><a
+              href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a"
+              target="_blank">Documentation</a></div>
+        </div>
+      </section>
 
-  <!-- Footer -->
-  <section class="footer-pc margin overflow-x">
-    <div class="footer-menu">
-      <div class="logo"><a href="index.html">Slice</a></div>
-      <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">About Creators: So Yeon
-          Kim</a></div>
-      <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">About Creators: Andie Han</a>
-      </div>
-      <div class="footer-menu-item"><a
-          href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a"
-          target="_blank">Documentation</a></div>
-    </div>
+      <section class="footer-mobile overflow-x">
+        <div class="footer-menu">
+          <div class="logo-main"><a href="index.html">Slice</a></div>
+          <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">So Yeon Kim</a></div>
+          <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">Andie Han</a></div>
+          <div class="footer-menu-item"><a
+              href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a"
+              target="_blank">Doc</a></div>
+        </div>
+      </section>
+    </section>
   </section>
-
-  <section class="footer-mobile overflow-x">
-    <div class="footer-menu">
-      <div class="logo-main"><a href="index.html">Slice</a></div>
-      <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">So Yeon Kim</a></div>
-      <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">Andie Han</a></div>
-      <div class="footer-menu-item"><a
-          href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a"
-          target="_blank">Doc</a></div>
-    </div>
-  </section>
+</body>
 
 </body>
 
@@ -186,5 +191,6 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="script.js"></script>
+
 
 </html>
