--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       <!-- function 1 -->
       <div class="stack-cards-item sectionDivider">
         <div class="text-component">
-          <h2>Organize your messy thoughts<br />
-            into a to-do list</h2>
+          <h2>Organize your <br/> scattered thoughts into<br />
+            a well-framed to do lsit</h2>
           <p class="function-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            No need to type, just reorder the words in your notes to<br/>
+            craft a to-do list for your day.
           </p>
         </div>
 
@@ -104,12 +104,10 @@
       <!-- function 2 -->
       <div class="stack-cards-item sectionDivider">
         <div class="text-component">
-          <h2>Place your to-dos<br />
-            in the timeline</br>
-            to visualize your 24 hours</h2>
+          <h2>Map the to-do list <br/>
+            to your 24 hours</h2>
           <p class="function-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Coordinate your tasks in your own productivity time zone </br> and visualize your schedule of the day.
           </p>
         </div>
         <div>
@@ -121,12 +119,10 @@
       <!-- function 3 -->
       <div class="stack-cards-item sectionDivider">
         <div class="text-component">
-          <h2>Check progress anytime<br />
-            on wearable devices</br>
-            and home screen</h2>
+          <h2>It's time for the focus!<br/></h2>
           <p class="function-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Check progress on your smart watches and the app.</br>
+            Slice is gonna be reminding you to stay on track!
           </p>
         </div>
 
