--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Scroll -->
   <div class="scroll overflow-x">
-    <p style="opacity: 1;">Scroll Down</p>
+    <p id="scroll">Scroll Down</p>
   </div>
 
   <!-- Main Section:Functions -->
@@ -135,7 +135,7 @@
 
 
     <!-- Quote holder -->
-    <section class="quote-container-box overflow-x">
+    <section id="final" class="quote-container-box overflow-x">
       <div class="quote-container">
         <div class="white-container">
           <img src="./Assets/Images/quote-white.svg" alt="white container" />
