--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="stack-cards-item sectionDivider">
         <div class="text-component">
           <h2>Organize your <br/> scattered thoughts into<br />
-            a well-framed to do lsit</h2>
+            a well-framed to do list</h2>
           <p class="function-description">
             No need to type, just reorder the words in your notes to<br/>
             craft a to-do list for your day.
