--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             <!-- App Store -->
             <a class="title-button" href="https://www.apple.com/" target="_blank">
               <i><img src="./Assets/Images/apple.svg" alt="Apple Logo" /></i>
-              <p class="title-button-description">Get on the <br /> <span class="title-button-store">App Store</span>
+              <p class="title-button-description">Coming soon<br /> <span class="title-button-store">App Store</span>
               </p>
             </a>
 
             <!-- Play Store -->
             <a class="title-button" href="https://play.google.com/store/apps?hl=en_US&gl=US" target="_blank">
               <i><img src="./Assets/Images/Google.svg" alt="Google Logo" /></i>
-              <p class="title-button-description">Get on the <br /><span class="title-button-store">Google Play</span>
+              <p class="title-button-description">Coming soon<br /><span class="title-button-store">Google Play</span>
               </p>
             </a>
           </div>
