--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <!-- navigation bar -->
   <section class="navigation margin overflow-x landing">
     <div class="logo"><a href="index.html">Slice</a></div>
-    <div class="weather-container">
+    <!-- <div class="weather-container">
       <span id="location">Finding the location</span>
       <span id="weather">...</span><br />
       <img id="weather-emoji" src="./Assets/Images/music_note.svg" alt="music note" />
-    </div>
+    </div> -->
   </section>
 
   <!-- Scroll -->
